<resources>
    <string name="app_name">ContactApp</string>
    <string name="search_contact">Search Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="show_all_contacts">Show All Contacts</string>
    <string name="contact_list">Contact List</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="description">Description</string>
    <string name="hobby">Hobby</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="business">Business</string>
    <string name="person">Person</string>
    <string name="add">Add</string>
    <string name="all_contact">All Contact</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="home1">home</string>
    <string name="home">home</string>
    <string name="search_hint">app_label</string>
    <string name="app_label">app_label</string>
    <string name="name2">Name</string>
    <string name="phone_number2">Phone Number</string>
    <string name="iv_icon">iv view</string>

</resources>
