<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/linearLayout">
    <TextView
            android:text="@string/contact_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contactList"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="36sp" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/show_all_contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_showContacts"
            app:layout_constraintTop_toBottomOf="@+id/tv_contactList" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/add_new_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_addContact"
            app:layout_constraintTop_toBottomOf="@+id/btn_showContacts" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/delete_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_deleteContact"
            app:layout_constraintTop_toBottomOf="@+id/btn_addContact" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/edit_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editContact"
            app:layout_constraintTop_toBottomOf="@+id/btn_deleteContact" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/search_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_searchContacts"
            app:layout_constraintTop_toBottomOf="@+id/btn_editContact" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>