<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Type">

    <Button
        android:id="@+id/btn_biz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/business"
        app:layout_constraintEnd_toStartOf="@id/btn_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider2" />

    <Button
        android:id="@+id/btn_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintEnd_toStartOf="@id/btn_home"
        app:layout_constraintStart_toEndOf="@+id/btn_biz"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_contacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />


    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        app:layout_constraintStart_toEndOf="@id/btn_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="7dp"
        app:layout_constraintBottom_toTopOf="@id/divider2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/lv_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_person" />

</androidx.constraintlayout.widget.ConstraintLayout>